Fix text alignment in info section in styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,6 @@ a,
 }
 
 .info-text {
-    text-align-last: center;
+    text-align: center;
     color: #5C6772;
 }
